2009-03-05  Jeremie Dimino <jeremie@dimino.org>

	* src/code/extlib/rope.mli: inverse doc of starts_with and ends_with

	* src/code/extlib/rope.ml: prevent starts_with and ends_with from failing

2009-03-04  David Rajchenbach-Teller  <David.Teller@univ-orleans.fr>

	* src/core/extlib/extPrint.mli: More documentation.

	* configure.ac: Now detecting default installation directory only if $prefix is NONE

	* configure.ac: Now adapting doc installation directory to $prefix.

2009-03-04  Jeremie Dimino <jeremie@dimino.org>

	* examples/snippets/test_printf.ml: change examples

	* src/core/extlib/exrPervasives.ml*: added [pdir_{f,F,obj}]

	* src/core/extlib/extPrintf.ml*: renamed [Print]

	* src/core/extlib/extPrintf2.ml*: renamed [ExtPrint]

2009-03-03  David Rajchenbach-Teller  <David.Teller@univ-orleans.fr>

	* src/core/extlib/extPrintf2.mli: Documentation.

2009-03-03  Jeremie Dimino <jeremie@dimino.org>

	* Makefile.in: target pa_strings.cmo -> pa_strings.cma

2009-03-02  David Rajchenbach-Teller  <David.Teller@univ-orleans.fr>

	* src/core/extlib/extRandom.ml*: [char], [enum_chars] added

	* src/core/extlib/extString.ml*: [quote] added

2009-02-21  Jeremie Dimino <jeremie@dimino.org>
	* src/core/extlib/extPrintf2.ml*: created

	* src/core/extlib/extPervasives.ml*: added default directives

	* src/syntax/pa_strings/pa_strings.mllib: created

	* src/syntax/pa_strings/pa_format.ml: created

	* src/syntax/pa_strings/format_ast.ml*: created

	* src/syntax/pa_strings/format_lexer.mll: created

	* src/syntax/pa_strings/_tags: tags cleanup, (with previous ones
	pa_strings.cma depended on Camlp4Top??)

	* build/META.in: {pa_estring.cmo, pa_strings.cmo} -> pa_strings.cma

	* src/main/nothreads/batteries.ml: added ExtPrintf2

	* src/main/threads/batteries.ml: added ExtPrintf2

	* src/main/core/extlib.mlpack: added ExtPrintf2
	
	* examples/snippets/test_printf.ml: created
	
	* examples/snippets/snippets.itarget: added test_printf
